chart/templates/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-service
  namespace: status-page
spec:
  type: ClusterIP
  selector:
    app: status-page-web
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-page-ingress
  namespace: status-page
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status-page-service
                port:
                  number: 80
